--- a/rr-timesheet/src/index.html
+++ b/rr-timesheet/src/index.html
@@ -4,9 +4,26 @@
   <meta charset="utf-8">
   <title>RrTimesheet</title>
   <base href="/">
+  
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- <script src="./node_modules/core-js/client/shim.min.js"></script> -->
+
+    <!-- <script src="node_modules/zone.js/dist/zone.js"></script> -->
+    <!-- <script src="node_modules/systemjs/dist/system.src.js"></script> -->
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <style>
+    	body {
+    		font-family: "museo-sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    		background-image: url("");
+    		background-repeat: no-repeat;
+    		color: #666;
+    		 }
+    </style>
+
 </head>
 <body>
   <app-root>Loading...</app-root>
